--- a/app/scss/_mixins.scss
+++ b/app/scss/_mixins.scss
@@ -321,3 +321,29 @@
   border-radius: 5px;
 }
 
+@mixin social-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 35px;
+  height: 35px;
+  background: $white;
+  border: 2px solid $brown-2;
+  border-radius: 50%;
+  color: $primary;
+  font-size: 16px;
+  transition: all 0.3s ease;
+  text-decoration: none;
+  
+  &:hover {
+    background: $brown-7;
+    border-color: $brown-7;
+    color: $white-full;
+    transform: translateY(-3px);
+  }
+  
+  &:active {
+    transform: translateY(-1px);
+  }
+}
+
