--- a/shared/footer-copyright/footer-copyright.scss
+++ b/shared/footer-copyright/footer-copyright.scss
@@ -4,15 +4,36 @@
 .footer-copyright {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  @include title-h6;
+  gap: 12px;
+  padding-top: 25px;
+  border-top: 1px solid $brown-2;
+  @include caption-lg;
+  color: $grey-2;
+  text-align: center;
+  max-width: 600px;
+  margin: 0 auto;
 
   &-row {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    gap: 10px;
-    @include title-h6;
+    gap: 12px;
+    @include caption-lg;
+    flex-wrap: wrap;
+    
+    a {
+      @include link-brown;
+      text-decoration: none;
+    }
+    
+    div {
+      color: $grey-2;
+      transition: color 0.3s ease;
+      
+      &:hover {
+        color: $primary;
+      }
+    }
   }
 }
