--- a/widgets/footer/media.scss
+++ b/widgets/footer/media.scss
@@ -1,15 +1,22 @@
 @import '../../app/scss/mixins';
 @import '../../app/scss/colors';
 
-@media screen and (max-width: 767px) {
-
+@media screen and (max-width: 768px) {
   .footer {
-
+    padding: 30px 0 15px;
+    
     &__inner {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      gap: 30px;
+      margin-bottom: 25px;
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .footer {
+    padding: 25px 0 15px;
+    
+    &__inner {
+      margin-bottom: 20px;
     }
   }
 }
