Added menu lang

--- a/app/scss/_colors.scss
+++ b/app/scss/_colors.scss
@@ -21,5 +21,13 @@ $brown-7: #E57900;
 $brown-2: #CCB29F;
 $brown-4: #AB8D7A;
 
+// Language Switcher Colors
+$lang-bg: #f8f9fa;
+$lang-border: #e9ecef;
+$lang-text: #6c757d;
+$lang-text-active: #495057;
+$lang-hover: #e9ecef;
+$lang-active: #dee2e6;
+
 
 
