--- a/widgets/main-title/main-title.scss
+++ b/widgets/main-title/main-title.scss
@@ -6,14 +6,14 @@
 
   &__title {
     @include title-h1;
-    color: $black;
+    color: $primary;
     padding-top: 10px;
     padding-bottom: 10px;
   }
 
   &__description {
     @include body-lg;
-    color: $black;
+    color: $grey-1;
     padding-bottom: 15px;
   }
 }
