--- a/shared/trust-care-banner/trust-care-banner.scss
+++ b/shared/trust-care-banner/trust-care-banner.scss
@@ -6,12 +6,13 @@
     background-color: $white;
     padding: 60px 0;
     width: 100%;
+    height: 712px;
 
     &__content {
         display: flex;
         align-items: center;
         gap: 60px;
-        min-height: 400px;
+        height: 600px;
     }
 
     &__left {
@@ -31,7 +32,7 @@
     &__logo {
         display: flex;
         justify-content: flex-start;
-        
+
         img {
             width: 100%;
             height: auto;
@@ -77,9 +78,15 @@
         }
     }
 
+    &__button {
+        display: flex;
+        justify-content: flex-start;
+        margin-top: 20px;
+    }
+
     &__doctor-image {
         position: relative;
-        
+ 
         img {
             width: 100%;
             height: auto;
@@ -93,6 +100,10 @@
             flex-direction: row-reverse;
         }
 
+        &__left {
+            align-items: flex-end;
+        }
+
         &__logo {
             justify-content: flex-end;
         }
@@ -103,6 +114,10 @@
 
         &__associations {
             direction: rtl;
+        }
+
+        &__button {
+            justify-content: flex-end;
         }
     }
 
