--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -9,3 +9,6 @@
 // Shared components
 @import '../../shared/trust-care-banner/trust-care-banner';
 
+// Widgets
+@import '../../widgets/main-gynecology/main-gynecology';
+
