--- a/pages/about/index.scss
+++ b/pages/about/index.scss
@@ -1,7 +1,7 @@
 @import '../../app/scss/mixins';
 @import '../../app/scss/colors';
 
-.block-salons {
+.block-abouts {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -9,7 +9,7 @@
   padding-bottom: 20px;
 }
 
-.salon {
+.about {
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
